2008.10.20: David Nichols
	* updated assembly macro includes to allow for Universal builds
	* added a new option for library debugging

2008.10.17: David Nichols
	* added QORE_VERSION_CODE to qore-version.h
	* updated next_build.sh to run with /bin/sh instead of /bin/bash
	* fixed a bug in string != - was returning True when the strings were
	  equal but had different character encodings

2008.10.16: David Nichols
        * updated library version
	* added new function to QoreEncoding to get maximum character width
	  for multi-byte character enodings

2008.10.15: David Nichols
	* WSDL.qc: fixed SOAP anyType serialization, fixed late resolution of 
	  element types

2008.10.09: David Nichols
	* HPUX itanium compile fixes in configure

2008.10.07: David Nichols
	* added bison to spec file for BuildRequires

*** v0.7.0 RELEASE *** 

2008.10.02: David Nichols
	* fixed a bug processing local variable declarations in a call
	  reference call
	* added a new virtual function for parse initialization to
	  AbstractQoreNode; last ABI change before 0.7.0 release
	* updated parser and other code to allow call references to be 
	  present in constant expressions (not at the top level, however) and
	  as case values
	* fixed a bug in user function call reference comparisons

2008.09.30: David Nichols
	* fixed modula operator to return 0 if right side is 0; before would
	  cause an arithmetic exception and the program would crash

2008.09.26: David Nichols
	* soap and wsdl fixes and http updates
	* corrected documentation for the "find" expression

2008.09.23: David Nichols
	* added Program::getGlobalVariable()

2008.09.22: David Nichols
	* made QoreDir class private to the library

2008.09.19: David Nichols
	* fixed SSLCertificate to assume a file name if the string argument is
	  less than 200 characters, otherwise assume a PEM-encoded certificate
	* fixed SSLCertificate::getPublicKey() to return the DER-encoded public