@@ -134,8 +134,7 @@ case "${host_os}" in
 		fi
 		# add "-AA" and -D__STDC_EXT__ to aCC commandline to enable a clean compile
 		if test -n "`echo $CXX|grep aCC`"; then
-		   CXXFLAGS="$CXXFLAGS -AA -D__STDC_EXT__ -D_RWSTD_MULTI_THREAD"
-		   AC_DEFINE(HPUX_ACC_SOCKLEN_HACK, 1, [if compiling on HP-UX with aCC and need to use int instead of socklen_t])
+		   CXXFLAGS="$CXXFLAGS -AA -D_HPUX_SOURCE -D__STDC_EXT__ -D_RWSTD_MULTI_THREAD -D_XOPEN_SOURCE_EXTENDED"
 		fi
 		AC_DEFINE(HPUX, 1, if compiling on HP-UX)
 		AC_DEFINE(NEED_ENVIRON_LOCK, 1, [if the environment operations need explicit locking])
